# rl-agent-playing-catch

./: .envrc.sample  .gitignore  .gitignore.py  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml  requirements.txt  train_and_run.sh
.github/workflows/: pre-commit.yml
src/: agent.py  env.py  experience_replay.py  qlearn.py  run.py  test.py  train.py
